fix image size on mobile

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ code {
     -moz-border-radius: 15px;
     border-radius: 15px;
     mask-image: radial-gradient(ellipse, rgba(0, 0, 0, 1.0) 40%, transparent 100%);
-    width: 40%;
+    width: 60%;
     height: auto;
 }
 
